--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,34 @@ core/storage/database/
 *.vdi
 *.iso
 .env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 **pycache**/
+__pycache__/
+*.py[cod]
+*$py.class
 .venv/
+venv/
+env/
+.Python
 core/interface/node_modules/
 core/interface/.next/
 core/interface/out/
+node_modules/
+.DS_Store
+*.pem
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+*.tsbuildinfo
+.vercel
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+screenshots/
